--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="public/bundle.css" />
-		<script src="./public/bundle.js"></script>
+		<script defer src="./public/bundle.js"></script>
 		<title>Mi viaje por el mundo</title>
 	</head>
 	<body>
@@ -26,13 +26,6 @@
 		<main>
 			<div class="contenedor">
 				<div class="categorias" id="categorias">
-					<a href="#" class="categoria" data-categoria="america">
-						<img class="categoria__img" src="./img/america.jpg" alt="" />
-						<div class="categoria__datos">
-							<p class="categoria__nombre">America</p>
-							<p class="categoria__numero-fotos">35 fotos</p>
-						</div>
-					</a>
 				</div>
 			</div>
 		</main>
